--- a/Api_frontend/expense-next/package.json
+++ b/Api_frontend/expense-next/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-time-picker": "^7.0.0",
