--- a/Api_frontend/expense-next/package.json
+++ b/Api_frontend/expense-next/package.json
@@ -37,6 +37,7 @@
     "react-time-picker": "^7.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-context-selector": "^2.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
